2014-??-?? Björn Paetzel <kolrabi@kolrabi.de>, kaIL ?
  * Added IL_IMAGE_OFFSET_MODE ( values IL_RELATIVE or IL_ABSOLUTE ), 
    changes behaviour of ilActive*(); 

2014-06-29 Björn Paetzel <kolrabi@kolrabi.de>, KaIL 1.9.0
  * Moved build system to CMake
  * Converted several files back to c
  * Rewritten GIF decoder
  * Modularized image format handling, making it easier to add new formats
  * Fixed _UNICODE support
  * Fixed some byte order bugs
  * Added up-to-date documentation
  * ilBlit handles negative destination coordinates correctly
  * Removed global state clobbering
  * Added thread safety
  * Deprecated some functions:
    - ilCompressFunc(ILenum Mode);
    - ilResetMemory(void);
  * Added new API functions:
  	- ilAddAlpha();
		- ilGetIntegerImage(ILuint Image, ILenum Mode);
		- iluNormalize();
    - iluSimilarity();
	* A lot of bug fixes sprinkled everywhere over the code

2014-05-08 Björn Ganster <mail@bjoern-ganster.de>, ResIL 1.8.2
	* File format fixes: cut, pix, hdr, sun ras, vtf?
	* Each image now has its own set of persistence functions

2014-04-11 Björn Ganster <mail@bjoern-ganster.de>, ResIL 1.8.1
	* New function: ilLoadFuncs reads a file using the read functions defined in ilSetRead
	* New function: ilSaveFuncs saves a file using the write functions defined in ilSetWrite
	* Improved performance for file type detection
	* Stability fixes for GIF, BMP
	* Work towards eliminating global variables
	* A collection of automated tests for loading and saving files
	* Some redundant code removed

2014-03-21 Björn Ganster <mail@bjoern-ganster.de>, ResIL 1.8.0
	* Fixed a bug in il_gif.cpp that caused a heap corruption
	  when the index for the transparent color pointed beyond
	  the current palette
	* Converted several files to cpp
	
2014-03-17 Björn Ganster <mail@bjoern-ganster.de>
	* Fixed a bug for .ico files that contain png data that 
	  caused a NULL pointer exception when no mask was specified

2009-03-08 Matěj Týč <bubla@users.sf.net>