@@ -1,6 +1,7 @@
 1.10.0:
 
   - ilGetFloat(v)
+  - ilClearMeta(); to remove all metadata
 
 next:
 
@@ -12,7 +13,7 @@ next:
   
   - iluToneMap()
 
-  - ilIsEnabled(IL_PNG) etc. to check for supported formats.
+  - ilIsEnabled(IL_PNG) etc. to check for supported formats. (is that read or write?)
 
   - WebP
   - JBIG, JBIG2
